[package]
name = "atlas-bincode"
description = "Atlas bincode utilities"
documentation = "https://docs.rs/atlas-bincode"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
atlas-instruction-error = { workspace = true }

[dev-dependencies]
atlas-system-interface = { workspace = true, features = ["bincode"] }

[lints]
workspace = true
