[package]
name = "atlas-blake3-hasher"
description = "Atlas BLAKE3 hashing"
documentation = "https://docs.rs/atlas-blake3-hasher"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
blake3 = ["dep:blake3"]

[dependencies]
atlas-hash = { workspace = true }

[target.'cfg(not(target_os = "atlas"))'.dependencies]
blake3 = { workspace = true, optional = true }

[target.'cfg(target_os = "atlas")'.dependencies]
atlas-define-syscall = { workspace = true }

[dev-dependencies]
atlas-blake3-hasher = { path = ".", features = ["blake3"] }

[lints]
workspace = true
