[package]
name = "atlas-bn254"
description = "Atlas BN254"
documentation = "https://docs.rs/atlas-bn254"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
include = ["src/**/*"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "atlas"))'.dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }

[target.'cfg(target_os = "atlas")'.dependencies]
atlas-define-syscall = { workspace = true }

[dev-dependencies]
array-bytes = { workspace = true }
criterion = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bn254"
harness = false

[lints]
workspace = true
