[package]
name = "atlas-borsh"
description = "Atlas Borsh utilities"
documentation = "https://docs.rs/atlas-borsh"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
borsh = { workspace = true }

[lints]
workspace = true
