[package]
name = "atlas-compute-budget-interface"
description = "Atlas compute budget interface."
documentation = "https://docs.rs/atlas-compute-budget-interface"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
borsh = ["dep:borsh"]
dev-context-only-utils = ["borsh"]
frozen-abi = ["dep:atlas-frozen-abi", "dep:atlas-frozen-abi-macro", "serde"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
borsh = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
atlas-frozen-abi = { workspace = true, features = [
    "frozen-abi",
], optional = true }
atlas-frozen-abi-macro = { workspace = true, features = [
    "frozen-abi",
], optional = true }
atlas-instruction = { workspace = true, features = ["std"] }
atlas-sdk-ids = { workspace = true }

[lints]
workspace = true
