[package]
name = "atlas-cpi"
description = "Atlas Cross-program Invocation"
documentation = "https://docs.rs/atlas-cpi"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
atlas-account-info = { workspace = true }
atlas-instruction = { workspace = true, features = ["std"] }
atlas-program-error = { workspace = true }
atlas-pubkey = { workspace = true }

[target.'cfg(target_os = "atlas")'.dependencies]
atlas-define-syscall = { workspace = true }
atlas-stable-layout = { workspace = true }

[dev-dependencies]
atlas-program-entrypoint = { workspace = true }
atlas-pubkey = { workspace = true, features = ["curve25519"] }
atlas-sdk-ids = { workspace = true }
atlas-system-interface = { workspace = true, features = ["bincode"] }
static_assertions = { workspace = true }

[lints]
workspace = true
