[package]
name = "atlas-ed25519-program"
description = "Instructions for the Atlas ed25519 native program"
documentation = "https://docs.rs/atlas-ed25519-program"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
atlas-instruction = { workspace = true, features = ["std"] }
atlas-sdk-ids = { workspace = true }

[lints]
workspace = true
