[package]
name = "atlas-epoch-info"
description = "Information about a Atlas epoch."
documentation = "https://docs.rs/atlas-epoch-info"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }

[lints]
workspace = true
