[package]
name = "atlas-epoch-rewards-hasher"
description = "Atlas epoch rewards hasher."
documentation = "https://docs.rs/atlas-epoch-rewards-hasher"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
siphasher = { workspace = true }
atlas-hash = { workspace = true }
atlas-pubkey = { workspace = true }

[lints]
workspace = true
