[package]
name = "atlas-epoch-schedule"
description = "Configuration for Atlas epochs and slots."
documentation = "https://docs.rs/atlas-epoch-schedule"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
frozen-abi = ["dep:atlas-frozen-abi", "dep:atlas-frozen-abi-macro"]
serde = ["dep:serde", "dep:serde_derive"]
sysvar = ["dep:atlas-sdk-ids", "dep:atlas-sysvar-id"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
atlas-frozen-abi = { workspace = true, optional = true }
atlas-frozen-abi-macro = { workspace = true, optional = true }
atlas-sdk-ids = { workspace = true, optional = true }
atlas-sdk-macro = { workspace = true }
atlas-sysvar-id = { workspace = true, optional = true }

[dev-dependencies]
atlas-clock = { workspace = true }
atlas-epoch-schedule = { path = ".", features = ["sysvar"] }
static_assertions = { workspace = true }

[lints]
workspace = true
