[package]
name = "atlas-epoch-stake"
description = "Atlas epoch stake syscall API"
documentation = "https://docs.rs/atlas-epoch-stake"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[dependencies]
atlas-pubkey = { workspace = true }

[target.'cfg(target_os = "atlas")'.dependencies]
atlas-define-syscall = { workspace = true }

[lints]
workspace = true
