[package]
name = "atlas-feature-gate-interface"
description = "Atlas feature gate program interface."
documentation = "https://docs.rs/atlas-feature-gate-interface"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = "1.81.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
bincode = [
    "dep:bincode",
    "dep:atlas-account",
    "dep:atlas-account-info",
    "dep:atlas-instruction",
    "dep:atlas-rent",
    "dep:atlas-system-interface",
    "serde",
]
dev-context-only-utils = ["bincode"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
atlas-account = { workspace = true, optional = true }
atlas-account-info = { workspace = true, optional = true }
atlas-instruction = { workspace = true, optional = true }
atlas-program-error = { workspace = true }
atlas-pubkey = { workspace = true }
atlas-rent = { workspace = true, optional = true }
atlas-sdk-ids = { workspace = true }
atlas-system-interface = { workspace = true, optional = true, features = [
    "bincode",
] }

[dev-dependencies]
atlas-feature-gate-interface = { path = ".", features = ["dev-context-only-utils"] }
strum = { workspace = true }
strum_macros = { workspace = true }

[lints]
workspace = true
