[package]
name = "atlas-fee-calculator"
description = "Atlas transaction fee calculation"
documentation = "https://docs.rs/atlas-fee-calculator"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = ["dep:atlas-frozen-abi", "dep:atlas-frozen-abi-macro"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
atlas-frozen-abi = { workspace = true, optional = true }
atlas-frozen-abi-macro = { workspace = true, optional = true }

[dev-dependencies]
atlas-clock = { workspace = true }
atlas-logger = { workspace = true }
static_assertions = { workspace = true }
