[package]
name = "atlas-fee-structure"
description = "Atlas fee structures."
documentation = "https://docs.rs/atlas-fee-structure"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
frozen-abi = ["dep:atlas-frozen-abi"]
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
serde = { workspace = true, optional = true }
serde_derive = { workspace = true, optional = true }
atlas-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }

[lints]
workspace = true
