[package]
name = "atlas-frozen-abi"
description = "Atlas Frozen ABI"
documentation = "https://docs.rs/atlas-frozen-abi"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
# activate the frozen-abi feature when we actually want to do frozen-abi testing,
# otherwise leave it off because it requires nightly Rust
frozen-abi = []

[dependencies]
boxcar = { workspace = true }
bs58 = { workspace = true, features = ["alloc"] }
bv = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
atlas-frozen-abi-macro = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "atlas"))'.dependencies]
im = { workspace = true, features = ["rayon", "serde"] }
memmap2 = { workspace = true }

[target.'cfg(not(target_os = "atlas"))'.dev-dependencies]
bitflags = { workspace = true, features = ["serde"] }
serde_bytes = { workspace = true }
serde_with = { workspace = true, features = ["macros"] }
atlas-logger = { workspace = true }

[lints]
workspace = true
