[package]
name = "atlas-instructions-sysvar"
description = "Type for instruction introspection during execution of Atlas programs."
documentation = "https://docs.rs/atlas-instructions-sysvar"
version = "3.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
dev-context-only-utils = ["dep:qualifier_attr"]

[dependencies]
qualifier_attr = { workspace = true, optional = true }
atlas-account-info = { workspace = true }
atlas-instruction = { workspace = true, default-features = false, features = ["std"] }
atlas-instruction-error = { workspace = true }
atlas-program-error = { workspace = true }
atlas-pubkey = { workspace = true, default-features = false }
atlas-sanitize = { workspace = true }
atlas-sdk-ids = { workspace = true }
atlas-serialize-utils = { workspace = true }
atlas-sysvar-id = { workspace = true }

[target.'cfg(not(target_os = "atlas"))'.dependencies]
bitflags = { workspace = true }

[lints]
workspace = true
